--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="CyWeb Nation helps people build sites, UI UX, Web Design.">
+    <meta name="description" content="InstaLaunch is a Web Development platform which helps people build businesses.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords"
-        content="Web Design, UI-UX, Web Development, Web Programming, hmtl, css, cywebnation, cyweb nation">
+    <meta name="keywords" content="Web Design, UI-UX, Web Development, Web Programming, hmtl, css, InstaLaunch">
 
     <!--====== Title ======-->
     <title>InstaLaunch</title>
@@ -334,7 +333,8 @@
                             <h3 class="title">Choose pricing plans for E-Commerce and LMS Websites</h3>
                         </div>
                         <h6 class="text-white text-center mt-4 mb-0">Please note: These plans are not applicable to
-                            customized websites.
+                            customized websites. The pricing<br>for customized websites are determined as per the
+                            requirements.
                         </h6>
                     </div>
                 </div>
@@ -349,7 +349,7 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
                             <span>Basic pack</span>
-                            <h3 class="title">$49.00/m</h3>
+                            <h3 class="title">$49.00/mo</h3>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
