--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                                     <a href="#pricing">Pricing</a>
                                 </li>
                                 <li class="menu-item-has-children active">
+                                    <a href="#features">Features</a>
+                                </li>
+                                <li class="menu-item-has-children active">
+                                    <a href="#pricing">Pricing</a>
+                                </li>
+
+                                <li class="menu-item-has-children active">
                                     <a href="#contact">Contact</a>
                                 </li>
                             </ul>
@@ -126,6 +133,7 @@
                                             <a href="#about">About</a>
                                         </li>
                                         <li><a href=" #pricing">Pricing</a></li>
+                                        <li><a href=" #features">Features</a></li>
                                         <li><a href=" #contact">Contact</a></li>
 
                                     </ul>
@@ -155,7 +163,7 @@
                                 <span>Insta</span>Launch
                             </h1>
                             <h2 data-animation="fadeInUp" data-delay=".5s" class="mt-10 text-white mt-5">Get your
-                                E-Commerce and LMS websites up and<br>RUNNING IN A DAY!
+                                E-Commerce and LMS websites up and<br>RUNNING IN 2 DAYS!
                             </h2>
                             <a data-animation="fadeInUp" data-delay="1s" class="main-btn mt-4"
                                 href="mailto:hi.instalaunch@gmail.com">Yes, I would love it!</a>
@@ -320,6 +328,101 @@
 
 
 
+    <!--====== WE LISTEN PART START ======-->
+
+    <section class="we-listen-area events-listen-area" id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="we-listen-content">
+                        <h3 class="title">Features we provide.</h3>
+                        <p>These are the features we provide especially for the E-Commerce and LMS websites.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="faq-accordion">
+                        <div class="accrodion-grp" data-grp-name="faq-accrodion">
+                            <div class="accrodion  animated wow fadeInRight" data-wow-duration="1500ms"
+                                data-wow-delay="0ms">
+                                <div class="accrodion-inner">
+                                    <div class="accrodion-title">
+                                        <h4>1. E-Commerce</h4>
+                                    </div>
+                                    <div class="accrodion-content">
+                                        <div class="inner">
+                                            <section class="best-creative-area">
+                                                <div class="container">
+                                                    <div class="best-creative-bg">
+                                                        <div class="best-creative-list">
+                                                            <div class="best-creative-list-item">
+                                                                <ul>
+                                                                    <li><i class="fa fa-check"></i>Fully Responsive</li>
+                                                                    <li><i class="fa fa-check"></i>SEO Optimized</li>
+                                                                    <li><i class="fa fa-check"></i>Multi Currency and
+                                                                        Language
+                                                                    </li>
+                                                                    <li><i class="fa fa-check"></i>Newsletters</li>
+                                                                    <li><i class="fa fa-check"></i>Ordered Products
+                                                                        Notification</li>
+                                                                    <li><i class="fa fa-check"></i>Quick and detailed
+                                                                        View for product</li>
+                                                                    <li><i class="fa fa-check"></i>Inclusive with blog
+                                                                        model</li>
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div><!-- /.inner -->
+                                    </div>
+                                </div><!-- /.accrodion-inner -->
+                            </div>
+                            <div class="accrodion   animated wow fadeInRight" data-wow-duration="1500ms"
+                                data-wow-delay="300ms">
+                                <div class="accrodion-inner">
+                                    <div class="accrodion-title">
+                                        <h4>2. Learning Management System (LMS)</h4>
+                                    </div>
+                                    <div class="accrodion-content">
+                                        <div class="inner">
+                                            <section class="best-creative-area">
+                                                <div class="container">
+                                                    <div class="best-creative-bg">
+                                                        <div class="best-creative-list">
+                                                            <div class="best-creative-list-item">
+                                                                <ul>
+                                                                    <li><i class="fa fa-check"></i>Fully Responsive</li>
+                                                                    <li><i class="fa fa-check"></i>SEO Optimized</li>
+                                                                    <li><i class="fa fa-check"></i>Multi Language</li>
+                                                                    <li><i class="fa fa-check"></i>Manage Courses</li>
+                                                                    <li><i class="fa fa-check"></i>Manage Quizes</li>
+                                                                    <li><i class="fa fa-check"></i>Manage Statistics
+                                                                    </li>
+                                                                    <li><i class="fa fa-check"></i>Bulk import/export of
+                                                                        files</li>
+                                                                    <li><i class="fa fa-check"></i>Subscription Shop
+                                                                    </li>
+
+
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div><!-- /.inner -->
+                                    </div>
+                                </div><!-- /.accrodion-inner -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--====== WE LISTEN PART ENDS ======-->
 
 
     <!--====== PRICING PART START ======-->
@@ -332,8 +435,9 @@
                         <div class="pricng-title text-center">
                             <h3 class="title">Choose pricing plans for E-Commerce and LMS Websites</h3>
                         </div>
-                        <h6 class="text-white text-center mt-4 mb-0">Please note: These plans are not applicable to
-                            customized websites. The pricing<br>for customized websites are determined as per the
+                        <h6 class="text-white text-center mt-4 mb-0 font-weight-normal">Please note: These plans are not
+                            applicable to
+                            customized websites. The pricing for<br>customized websites are determined as per the
                             requirements.
                         </h6>
                     </div>
