--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>InstaLaunch</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/cyweb-logo.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/fav-logo.png" type="image/png">
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
