--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
                                     <a href="#about">About</a>
                                 </li>
                                 <li class="menu-item-has-children active">
-                                    <a href="#pricing">Pricing</a>
-                                </li>
-                                <li class="menu-item-has-children active">
                                     <a href="#features">Features</a>
                                 </li>
                                 <li class="menu-item-has-children active">
@@ -339,7 +336,7 @@
                             <div class="accrodion  animated wow fadeInRight" data-wow-duration="1500ms"
                                 data-wow-delay="0ms">
                                 <div class="accrodion-inner">
-                                    <div class="accrodion-title">
+                                    <div class="accrodion-title mb-4">
                                         <h4>1. E-Commerce</h4>
                                     </div>
                                     <div class="accrodion-content">
@@ -375,7 +372,7 @@
                             <div class="accrodion   animated wow fadeInRight" data-wow-duration="1500ms"
                                 data-wow-delay="300ms">
                                 <div class="accrodion-inner">
-                                    <div class="accrodion-title">
+                                    <div class="accrodion-title mb-4">
                                         <h4>2. Learning Management System (LMS)</h4>
                                     </div>
                                     <div class="accrodion-content">
