--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
                         <div class="offcanvas_footer">
                             <span><a href="mailto:hi.cybernation@gmail.com"><i class="fa fa-envelope-o"></i>
-                                    hi.cybernation@gmail.com</a></span>
+                                    hi.instalaunch@gmail.com</a></span>
                         </div>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
                             <div class="col-lg-7">
                                 <div class="cta-text">
                                     <p>We will be very much interested and excited to be a part of your esteemed
-                                        bussiness.</p>
+                                        business.</p>
                                 </div>
                             </div>
                         </div>
