--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Unlimited Hosting</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Unlimited Hosting Until Expiry</span> <i class="fa fa-check"></i></li>
                                     <li><span>1 year free support</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
