--- a/index.html
+++ b/index.html
@@ -439,13 +439,15 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
                             <span>Basic pack</span>
-                            <h3 class="title">$49.00/mo</h3>
+                            <h3 class="title">$499.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for cloud hosting)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Hosting until expiry</span> <i class="fa fa-check"></i></li>
-                                    <li><span>1 month free support</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (3 mo)</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
                             <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
@@ -454,13 +456,15 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
                             <span>Standard pack</span>
-                            <h3 class="title">$499.00/yr</h3>
+                            <h3 class="title">$749.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for shared web hosting)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Hosting until expiry</span> <i class="fa fa-check"></i></li>
-                                    <li><span>6 month free support</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Hosting (6 mo)</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (6 mo)</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
                             <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
@@ -470,12 +474,14 @@
                         <div class="pricing-item text-center">
                             <span>Ultimate pack</span>
                             <h3 class="title">$999.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for shared web hosting)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Unlimited Hosting Until Expiry</span> <i class="fa fa-check"></i></li>
-                                    <li><span>1 year free support</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free Hosting (1 yr)</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (1 yr)</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
                             <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
