--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
                             <h3 data-animation="fadeInUp" data-delay=".5s" class="mt-10 text-white mt-5">Get your
                                 E-Commerce and LMS websites up and<br>RUNNING IN 2 DAYS!
                             </h3>
+                            <h5 data-animation="fadeInUp" data-delay=".5s" class="text-white mt-3 font-weight-normal">
+                                Also, Build
+                                customized
+                                websites and apps
+                            </h5>
                             <a data-animation="fadeInUp" data-delay="1s" class="main-btn mt-4"
                                 href="mailto:hi.instalaunch@gmail.com">Yes, I would love it!</a>
                         </div>
@@ -438,50 +443,49 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
-                            <span>Basic pack</span>
+                            <span>Basic pack</span><br><br>
                             <h3 class="title">$499.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for cloud hosting)</small>
+                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
                                     <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free support (6 mo)</span> <i class="fa fa-check"></i></li>
-                                </ul>
-                            </div>
-                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-7 col-sm-9">
-                        <div class="pricing-item text-center">
-                            <span>Standard pack</span>
-                            <h3 class="title">$749.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for shared web hosting)</small>
-                            <div class="list">
-                                <ul>
-                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
-                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Hosting (6 mo)</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free support (6 mo)</span> <i class="fa fa-check"></i></li>
-                                </ul>
-                            </div>
-                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-7 col-sm-9">
-                        <div class="pricing-item text-center">
-                            <span>Ultimate pack</span>
-                            <h3 class="title">$999.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for shared web hosting)</small>
-                            <div class="list">
-                                <ul>
-                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
-                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Domain Name (1 yr)</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free Hosting (1 yr)</span> <i class="fa fa-check"></i></li>
                                     <li><span>Free support (1 yr)</span> <i class="fa fa-check"></i></li>
+                                </ul>
+                            </div>
+                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-7 col-sm-9">
+                        <div class="pricing-item text-center">
+                            <span>Standard pack</span><br>
+                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+                            <h3 class="title">$299.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for Customized Websites)</small>
+                            <div class="list">
+                                <ul>
+                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
+                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (2 mo)</span> <i class="fa fa-check"></i></li>
+                                </ul>
+                            </div>
+                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-7 col-sm-9">
+                        <div class="pricing-item text-center">
+                            <span>Ultimate pack</span><br>
+                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+                            <h3 class="title">$999.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small>
+                            <div class="list">
+                                <ul>
+                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
+                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (3 mo)</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
                             <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
