--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div class="pricng-title text-center">
-                            <h3 class="title">Choose pricing plans for E-Commerce and LMS Websites</h3>
+                            <h3 class="title">Choose pricing plans</h3>
                         </div>
                     </div>
                 </div>
