--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <h5 data-animation="fadeInUp" data-delay=".5s" class="text-white mt-3 font-weight-normal">
                                 Also, Build
                                 customized
-                                websites and apps
+                                Websites, Web and Mobile apps.
                             </h5>
                             <a data-animation="fadeInUp" data-delay="1s" class="main-btn mt-4"
                                 href="mailto:hi.instalaunch@gmail.com">Yes, I would love it!</a>
