--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
-                            <span>Basic pack</span><br><br>
+                            <span>Basic pack</span><br>
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$199.00</h3>
                             <small class="text-black font-weight-bold mt-1">(for Customized Websites)</small>
@@ -461,7 +461,6 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
                             <span>Standard pack</span><br>
-                            <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$499.00</h3>
                             <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
                             <div class="list">
