--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                     </div>
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
-                            <span>Standard pack</span><br>
+                            <span>Standard pack</span><br><br>
                             <h3 class="title">$499.00</h3>
                             <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
                             <div class="list">
