--- a/index.html
+++ b/index.html
@@ -443,10 +443,10 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
-                            <span>Basic pack</span><br>
+<!--                             <span>Basic pack</span><br> -->
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$199.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for Customized Websites)</small>
+                            <small class="text-black font-weight-bold mt-1">(For Customized Websites & Small Businesses)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
@@ -460,24 +460,8 @@
                     </div>
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
-                            <span>Standard pack</span><br><br>
-                            <h3 class="title">$499.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
-                            <div class="list">
-                                <ul>
-                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
-                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
-                                    <li><span>Free support (1 yr)</span> <i class="fa fa-check"></i></li>
-                                </ul>
-                            </div>
-                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-7 col-sm-9">
-                        <div class="pricing-item text-center">
-                            <span>Ultimate pack</span><br>
-                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+<!--                             <span>Standard pack</span><br><br> -->
+                            <br>
                             <h3 class="title">$999.00</h3>
                             <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small>
                             <div class="list">
@@ -486,6 +470,23 @@
                                     <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
                                     <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
                                     <li><span>Free support (3 mo)</span> <i class="fa fa-check"></i></li>
+                                </ul>
+                            </div>
+                            <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-7 col-sm-9">
+                        <div class="pricing-item text-center">
+<!--                             <span>Ultimate pack</span><br> -->
+                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+                            <h3 class="title">$499.00</h3>
+                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
+                            <div class="list">
+                                <ul>
+                                    <li><span>Website Building</span> <i class="fa fa-check"></i></li>
+                                    <li><span>SEO Included</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Hosting Setup</span> <i class="fa fa-check"></i></li>
+                                    <li><span>Free support (1 yr)</span> <i class="fa fa-check"></i></li>
                                 </ul>
                             </div>
                             <a class="main-btn main-btn-2" href="mailto:hi.instalaunch@gmail.com">Contact Us</a>
