--- a/index.html
+++ b/index.html
@@ -446,7 +446,8 @@
 <!--                             <span>Basic pack</span><br> -->
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$199.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(For Customized Websites & Small Businesses)</small>
+                            <small class="text-black font-weight-bold mt-1">(For Customized Websites </small>
+                            <small class="text-black font-weight-bold mt-1">& Small Businesses)</small>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
@@ -463,7 +464,7 @@
 <!--                             <span>Standard pack</span><br><br> -->
                             <br>
                             <h3 class="title">$999.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small>
+                            <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
@@ -480,7 +481,7 @@
 <!--                             <span>Ultimate pack</span><br> -->
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$499.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small>
+                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
