--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 <!--                             <span>Basic pack</span><br> -->
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$199.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(For Customized Websites </small>
+                            <small class="text-black font-weight-bold mt-1">(For Customized Websites </small><br>
                             <small class="text-black font-weight-bold mt-1">& Small Businesses)</small>
                             <div class="list">
                                 <ul>
@@ -462,9 +462,9 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
 <!--                             <span>Standard pack</span><br><br> -->
-                            <br>
+                            <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$999.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small><br>
+                            <small class="text-black font-weight-bold mt-1">(for Web + Mobile Apps)</small><br><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
@@ -479,9 +479,9 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
 <!--                             <span>Ultimate pack</span><br> -->
-                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+                            <br>
                             <h3 class="title">$499.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small><br>
+                            <small class="text-black font-weight-bold mt-1">(for E-Commerce and LMS Websites)</small><br><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
