--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 <!--                             <span>Ultimate pack</span><br> -->
                             <br>
                             <h3 class="title">$499.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(For E-Commerce and LMS Websites)</small><br><br>
+                            <small class="text-black font-weight-bold mt-1">(For E-Commerce and LMS Websites)</small><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
