--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 <!--                             <span>Standard pack</span><br><br> -->
                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$999.00</h3>
-                            <small class="text-black font-weight-bold mt-1">(For Web + Mobile Apps)</small><br><br>
+                            <small class="text-black font-weight-bold mt-1">(For Web and Mobile Apps)</small><br><br>
                             <div class="list">
                                 <ul>
                                     <li><span>Website Building</span> <i class="fa fa-check"></i></li>
