--- a/index.html
+++ b/index.html
@@ -186,29 +186,16 @@
     <!--====== BANNER PART ENDS ======-->
 
 
-    <!--====== LEADING PART START ======-->
-
-    <section class="leading-area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <div class="leading-content">
-                        <h4 class="w-75 text-black m-auto text-justify">
-                            We, at InstaLaunch, especially love the emphasis
-                            on teamwork and supporting each other, so that the people inside of the organization can be
-                            in the best position to support their customers.</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!--====== LEADING PART ENDS ======-->
-
     <!--====== SUB PART START ======-->
 
     <section id="about" class="services-box-area pt-30">
         <div class="container">
+            <div class="leading-content mt-70">
+                <h4 class="w-75 text-black m-auto text-justify">
+                    We, at InstaLaunch, especially love the emphasis
+                    on teamwork and supporting each other, so that the people inside of the organization can be
+                    in the best position to support their customers.</h4>
+            </div>
             <div class="row mt-50">
                 <div class="col-lg-12">
                     <div class="why-codesk-title text-center">
