--- a/index.html
+++ b/index.html
@@ -596,7 +596,11 @@
 
 
 
-
+<script type="text/javascript">
+if ( window.self !== window.top ) {
+    window.top.location.href=window.location.href;
+}
+</script>
 
 
     <!--====== jquery js ======-->
