--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
     <!--====== PRICING PART START ======-->
 
-    <section class="pricing-area" id="pricing">
+<!--     <section class="pricing-area" id="pricing">
         <div class="pricing-title-area">
             <div class="container">
                 <div class="row justify-content-center">
@@ -487,7 +487,7 @@
             </div>
         </div>
     </section>
-
+ -->
     <!--====== PRICING PART ENDS ======-->
 
 
