--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div class="col-lg-4 col-md-7 col-sm-9">
                         <div class="pricing-item text-center">
 <!--                             <span>Basic pack</span><br> -->
-                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+<!--                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$199.00</h3>
                             <small class="text-black font-weight-bold mt-1">(For Customized Websites </small><br>
                             <small class="text-black font-weight-bold mt-1">& Small Businesses)</small>
@@ -447,9 +447,9 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-7 col-sm-9">
-                        <div class="pricing-item text-center">
+                        <div class="pricing-item text-center"> -->
 <!--                             <span>Standard pack</span><br><br> -->
-                            <small class="text-black font-weight-bold mt-1">starting from..</small>
+<!--                             <small class="text-black font-weight-bold mt-1">starting from..</small>
                             <h3 class="title">$999.00</h3>
                             <small class="text-black font-weight-bold mt-1">(For Web and Mobile Apps)</small><br><br>
                             <div class="list">
@@ -464,9 +464,9 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-7 col-sm-9">
-                        <div class="pricing-item text-center">
+                        <div class="pricing-item text-center"> -->
 <!--                             <span>Ultimate pack</span><br> -->
-                            <br>
+<!--                             <br>
                             <h3 class="title">$499.00</h3>
                             <small class="text-black font-weight-bold mt-1">(For E-Commerce and LMS Websites)</small><br>
                             <div class="list">
@@ -486,7 +486,7 @@
                 <img src="assets/images/pricing-dot.png" alt="pricing">
             </div>
         </div>
-    </section>
+    </section> -->
  -->
     <!--====== PRICING PART ENDS ======-->
 
